--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -124,4 +124,83 @@
       #ab8459;
     background-blend-mode: screen, normal;
   }
+
+  .bg-paper-8 {
+    background: url(/images/textures/paper-8.webp) lightgray 50% / cover
+        no-repeat,
+      #f4d9bb;
+    background-blend-mode: multiply, normal;
+  }
+}
+
+.godly-button {
+  display: inline-flex;
+  height: 61px;
+  padding: 22px 14px 22px 19px;
+  align-items: center;
+  gap: 10px;
+  flex-shrink: 0;
+  border-radius: 9px;
+  border: 4px solid #9f1a16;
+  box-shadow: 0 17px 34px 0 rgba(9, 9, 9, 0.24),
+    0 1px 1.4px 0 rgba(247, 235, 235, 0.69) inset;
+  background: linear-gradient(
+      180deg,
+      rgba(0, 0, 0, 0) 0%,
+      rgba(159, 17, 17, 0.6) 100%
+    ),
+    linear-gradient(180deg, #eb3434 0%, #b91c1c 100%),
+    url(/images/textures/paper-14.webp) lightgray 50% / cover no-repeat;
+  background-blend-mode: normal, hard-light, normal;
+  box-shadow: 0 -7px 7.3px 0 rgba(36, 34, 34, 0.33) inset,
+    0 -9px 5.289px 0 #930e0e inset, 0 17px 34px 0 rgba(9, 9, 9, 0.24);
+  color: #fde4c8;
+  text-box-trim: trim-start;
+  text-box-edge: text alphabetic;
+  font-family: "Marlton Sans";
+  font-size: 24px;
+  font-weight: 400;
+  text-transform: lowercase;
+  transition: background 0.25s cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 0.25s cubic-bezier(0.4, 0, 0.2, 1), color 0.2s;
+  transition-delay: 0.3s;
+  transition-timing-function: ease-in-out;
+  outline: none;
+  position: relative;
+}
+
+.godly-button:hover,
+.godly-button:focus-visible {
+  background: linear-gradient(
+      180deg,
+      rgba(255, 255, 255, 0.1) 0%,
+      rgba(159, 17, 17, 0.7) 100%
+    ),
+    linear-gradient(180deg, #ff4747 0%, #b91c1c 100%),
+    url(/images/textures/paper-14.webp) lightgray 50% / cover no-repeat;
+  background-blend-mode: lighten, hard-light, normal;
+  box-shadow: 0 -7px 7.3px 0 rgba(36, 34, 34, 0.33) inset,
+    0 -9px 5.289px 0 #930e0e inset, 0 24px 48px 0 rgba(9, 9, 9, 0.28),
+    0 0 0 4px #fde4c888;
+  color: #fff6e9;
+  border-color: #c91e1e;
+  cursor: pointer;
+  z-index: 1;
+  transition-timing-function: ease-in-out;
+}
+
+.godly-button:active {
+  background: linear-gradient(
+      180deg,
+      rgba(0, 0, 0, 0.18) 0%,
+      rgba(159, 17, 17, 0.8) 100%
+    ),
+    linear-gradient(180deg, #b91c1c 0%, #930e0e 100%),
+    url(/images/textures/paper-14.webp) lightgray 50% / cover no-repeat;
+  background-blend-mode: multiply, hard-light, normal;
+  box-shadow: 0 -3px 3.3px 0 rgba(36, 34, 34, 0.33) inset,
+    0 -7px 5.289px 0 #930e0e inset, 0 8px 16px 0 rgba(9, 9, 9, 0.18);
+  color: #ffe7c8;
+  border-color: #930e0e;
+  z-index: 2;
 }
