feat: attempt to fix fonts

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -93,7 +93,7 @@
   }
   .font-marlton,
   .font-luminaire {
-    text-box-trim: trim-start;
+    text-box-trim: trim-both;
   }
 
   .font-marlton,
@@ -155,9 +155,9 @@
   box-shadow: 0 -7px 7.3px 0 rgba(36, 34, 34, 0.33) inset,
     0 -9px 5.289px 0 #930e0e inset, 0 17px 34px 0 rgba(9, 9, 9, 0.24);
   color: #fde4c8;
-  text-box-trim: trim-start;
+  text-box-trim: trim-both;
   text-box-edge: text alphabetic;
-  font-family: "Marlton Sans";
+  font-family: var(--font-marlton), sans-serif;
   font-size: 24px;
   font-weight: 400;
   text-transform: lowercase;
