feat: make the entire app responsive except header

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -131,7 +131,7 @@
   }
 
   .bg-paper-16-2 {
-    background: url(/images/textures/paper-16.webp) lightgray -394px 0px / 149.931%
+    background: url(/images/textures/paper-16.webp) lightgray 50% / 149.931%
         100% no-repeat,
       #fff2e2;
     background-blend-mode: multiply, normal;
