feat: update services page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -178,8 +178,8 @@
     flex-shrink: 0;
     border-radius: 9px;
     border: 4px solid #9f1a16;
-    box-shadow: 0 17px 34px 0 rgba(9, 9, 9, 0.24),
-      0 1px 1.4px 0 rgba(247, 235, 235, 0.69) inset;
+    box-shadow: 0 17px 34px 0 rgba(9, 9, 9, 0.24) 0 1px 1.4px 0
+      rgba(247, 235, 235, 0.69) inset;
     background: linear-gradient(
         180deg,
         rgba(0, 0, 0, 0) 0%,
