feat: update images to webp

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -169,14 +169,14 @@
   }
 
   .bg-paper-6 {
-    background: url(/images/textures/paper-6.jpg) lightgray 50% / cover
+    background: url(/images/textures/paper-6.webp) lightgray 50% / cover
         no-repeat,
       #cbb7a0;
     background-blend-mode: luminosity, normal;
   }
 
   .paper-bg-1 {
-    background: url(/images/textures/paper-1.png) lightgray 50% / cover
+    background: url(/images/textures/paper-1.webp) lightgray 50% / cover
         no-repeat,
       #cbb7a0;
 
