feat: add about us section

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,6 +47,7 @@
   --font-marlton: var(--font-marlton), sans-serif;
   --font-luminaire: var(--font-luminaire), sans-serif;
   --font-satoshi: var(--font-satoshi), sans-serif;
+  --font-inter: var(--font-inter), sans-serif;
 }
 
 :root {
