--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,6 +45,7 @@
   --font-sans: var(--font-satoshi), sans-serif;
   --font-satoshi: var(--font-satoshi), sans-serif;
   --font-marlton: var(--font-marlton), sans-serif;
+  --font-marlton-script: var(--font-marlton-script), sans-serif;
   --font-luminaire: var(--font-luminaire), sans-serif;
   --font-satoshi: var(--font-satoshi), sans-serif;
   --font-inter: var(--font-inter), sans-serif;
@@ -105,6 +106,7 @@
     @apply bg-background text-foreground font-sans;
   }
   .font-marlton,
+  .font-marlton-script,
   .font-luminaire {
     text-box-trim: var(--text-box-trim);
     text-box-edge: var(--text-box-edge);
@@ -126,61 +128,66 @@
   }
 
   .bg-paper-14 {
-    background:
-      url(/images/textures/paper-14.webp) lightgray 50% / cover no-repeat,
+    background: url(/images/textures/paper-14.webp) lightgray 50% / cover
+        no-repeat,
       #f3ca9e;
     background-blend-mode: screen, normal;
   }
 
   .bg-paper-16 {
-    background:
-      url(/images/textures/paper-16.webp) lightgray 50% / cover no-repeat,
+    background: url(/images/textures/paper-16.webp) lightgray 50% / cover
+        no-repeat,
       #ab8459;
     background-blend-mode: screen, normal;
   }
 
   .bg-paper-16-2 {
-    background:
-      url(/images/textures/paper-16.webp) lightgray 50% / 149.931% 100%
-        no-repeat,
+    background: url(/images/textures/paper-16.webp) lightgray 50% / 149.931%
+        100% no-repeat,
       #fff2e2;
     background-size: cover;
     background-blend-mode: multiply, normal;
   }
 
   .bg-paper-16-3 {
-    background:
-      url(/images/textures/paper-16.webp) lightgray 50% / 149.931% 100%
-        no-repeat,
+    background: url(/images/textures/paper-16.webp) lightgray 50% / 149.931%
+        100% no-repeat,
       #262424;
     background-size: cover;
     background-blend-mode: multiply, normal;
   }
 
   .bg-paper-8 {
-    background:
-      url(/images/textures/paper-8.webp) lightgray 50% / cover no-repeat,
+    background: url(/images/textures/paper-8.webp) lightgray 50% / cover
+        no-repeat,
       #f4d9bb;
     background-blend-mode: multiply, normal;
   }
 
   .bg-paper-8-2 {
-    background:
-      url(/images/textures/paper-8.webp) lightgray 50% / cover no-repeat,
+    background: url(/images/textures/paper-8.webp) lightgray 50% / cover
+        no-repeat,
       #fdfdfd;
     background-blend-mode: multiply, normal;
   }
 
+  .bg-paper-8-3 {
+    background: url(/images/textures/paper-8.webp) lightgray 50% / cover
+        no-repeat,
+      #e7e3e0;
+    background-blend-mode: multiply, normal;
+  }
+
   .bg-paper-6 {
-    background:
-      url(/images/textures/paper-6.webp) lightgray 50% / cover no-repeat,
+    background: url(/images/textures/paper-6.webp) lightgray 50% / cover
+        no-repeat,
       #cbb7a0;
     background-blend-mode: luminosity, normal;
   }
 
   .paper-bg-1 {
-    background:
-      url(/images/textures/paper-1.webp) lightgray 50% / cover no-repeat,
+    background: url(/images/textures/paper-1.webp) lightgray 50% / cover
+        no-repeat,
       #cbb7a0;
 
     background-blend-mode: multiply, normal;
@@ -197,24 +204,23 @@
     border: 4px solid #9f1a16;
     box-shadow: 0 17px 34px 0 rgba(9, 9, 9, 0.24) 0 1px 1.4px 0
       rgba(247, 235, 235, 0.69) inset;
-    background:
-      linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(159, 17, 17, 0.6) 100%),
+    background: linear-gradient(
+        180deg,
+        rgba(0, 0, 0, 0) 0%,
+        rgba(159, 17, 17, 0.6) 100%
+      ),
       linear-gradient(180deg, #eb3434 0%, #b91c1c 100%),
       url(/images/textures/paper-14.webp) lightgray 50% / cover no-repeat;
     background-blend-mode: normal, hard-light, normal;
-    box-shadow:
-      0 -7px 7.3px 0 rgba(36, 34, 34, 0.33) inset,
-      0 -9px 5.289px 0 #930e0e inset,
-      0 17px 34px 0 rgba(9, 9, 9, 0.24);
+    box-shadow: 0 -7px 7.3px 0 rgba(36, 34, 34, 0.33) inset,
+      0 -9px 5.289px 0 #930e0e inset, 0 17px 34px 0 rgba(9, 9, 9, 0.24);
     font-family: var(--font-marlton), sans-serif;
     color: #fde4c8;
     font-size: 24px;
     font-weight: 400;
     text-transform: lowercase;
-    transition:
-      background 0.25s cubic-bezier(0.4, 0, 0.2, 1),
-      box-shadow 0.25s cubic-bezier(0.4, 0, 0.2, 1),
-      color 0.2s;
+    transition: background 0.25s cubic-bezier(0.4, 0, 0.2, 1),
+      box-shadow 0.25s cubic-bezier(0.4, 0, 0.2, 1), color 0.2s;
     transition-delay: 0.3s;
     transition-timing-function: ease-in-out;
     outline: none;
@@ -228,8 +234,7 @@
 
   .godly-button:hover,
   .godly-button:focus-visible {
-    background:
-      linear-gradient(
+    background: linear-gradient(
         180deg,
         rgba(255, 255, 255, 0.1) 0%,
         rgba(159, 17, 17, 0.7) 100%
@@ -237,10 +242,8 @@
       linear-gradient(180deg, #ff4747 0%, #b91c1c 100%),
       url(/images/textures/paper-14.webp) lightgray 50% / cover no-repeat;
     background-blend-mode: lighten, hard-light, normal;
-    box-shadow:
-      0 -7px 7.3px 0 rgba(36, 34, 34, 0.33) inset,
-      0 -9px 5.289px 0 #930e0e inset,
-      0 24px 48px 0 rgba(9, 9, 9, 0.28);
+    box-shadow: 0 -7px 7.3px 0 rgba(36, 34, 34, 0.33) inset,
+      0 -9px 5.289px 0 #930e0e inset, 0 24px 48px 0 rgba(9, 9, 9, 0.28);
     color: #fff6e9;
     border-color: #c91e1e;
     cursor: pointer;
@@ -249,8 +252,7 @@
   }
 
   .godly-button:active {
-    background:
-      linear-gradient(
+    background: linear-gradient(
         180deg,
         rgba(0, 0, 0, 0.18) 0%,
         rgba(159, 17, 17, 0.8) 100%
@@ -258,10 +260,8 @@
       linear-gradient(180deg, #b91c1c 0%, #930e0e 100%),
       url(/images/textures/paper-14.webp) lightgray 50% / cover no-repeat;
     background-blend-mode: multiply, hard-light, normal;
-    box-shadow:
-      0 -3px 3.3px 0 rgba(36, 34, 34, 0.33) inset,
-      0 -7px 5.289px 0 #930e0e inset,
-      0 8px 16px 0 rgba(9, 9, 9, 0.18);
+    box-shadow: 0 -3px 3.3px 0 rgba(36, 34, 34, 0.33) inset,
+      0 -7px 5.289px 0 #930e0e inset, 0 8px 16px 0 rgba(9, 9, 9, 0.18);
     color: #ffe7c8;
     border-color: #930e0e;
     z-index: 2;
@@ -276,25 +276,24 @@
     flex-shrink: 0;
     border-radius: 9px;
     border: 1px solid #232222;
-    background:
-      linear-gradient(180deg, rgba(97, 80, 62, 0.6) 0%, rgba(0, 0, 0, 0) 100%),
+    background: linear-gradient(
+        180deg,
+        rgba(97, 80, 62, 0.6) 0%,
+        rgba(0, 0, 0, 0) 100%
+      ),
       linear-gradient(180deg, #323030 100%, #262424 0%),
       url(/images/textures/paper-14.webp) lightgray 50% / cover no-repeat;
     background-blend-mode: normal, hard-light, normal;
-    box-shadow:
-      0 -7px 5.289px 0 rgba(36, 34, 34, 0.33) inset,
-      0 -9px 5.289px 0 #343232 inset,
-      0 17px 34px 0 rgba(9, 9, 9, 0.24),
+    box-shadow: 0 -7px 5.289px 0 rgba(36, 34, 34, 0.33) inset,
+      0 -9px 5.289px 0 #343232 inset, 0 17px 34px 0 rgba(9, 9, 9, 0.24),
       0 0 0 4px #61503e;
     font-family: var(--font-marlton), sans-serif;
     color: #fde4c8;
     font-size: 24px;
     font-weight: 400;
     text-transform: lowercase;
-    transition:
-      background 0.25s cubic-bezier(0.4, 0, 0.2, 1),
-      box-shadow 0.25s cubic-bezier(0.4, 0, 0.2, 1),
-      color 0.2s;
+    transition: background 0.25s cubic-bezier(0.4, 0, 0.2, 1),
+      box-shadow 0.25s cubic-bezier(0.4, 0, 0.2, 1), color 0.2s;
     transition-delay: 0.3s;
     transition-timing-function: ease-in-out;
     outline: none;
@@ -308,8 +307,7 @@
 
   .godly-button-gray:hover,
   .godly-button-gray:focus-visible {
-    background:
-      linear-gradient(
+    background: linear-gradient(
         180deg,
         rgba(255, 255, 255, 0.1) 0%,
         rgba(97, 80, 62, 0.7) 100%
@@ -317,10 +315,8 @@
       linear-gradient(180deg, #404040 100%, #323030 0%),
       url(/images/textures/paper-14.webp) lightgray 50% / cover no-repeat;
     background-blend-mode: lighten, hard-light, normal;
-    box-shadow:
-      0 -7px 5.289px 0 rgba(36, 34, 34, 0.33) inset,
-      0 -9px 5.289px 0 #343232 inset,
-      0 24px 48px 0 rgba(9, 9, 9, 0.28),
+    box-shadow: 0 -7px 5.289px 0 rgba(36, 34, 34, 0.33) inset,
+      0 -9px 5.289px 0 #343232 inset, 0 24px 48px 0 rgba(9, 9, 9, 0.28),
       0 0 0 4px #61503e;
     color: #fff6e9;
     border-color: #404040;
@@ -330,8 +326,7 @@
   }
 
   .godly-button-gray:active {
-    background:
-      linear-gradient(
+    background: linear-gradient(
         180deg,
         rgba(0, 0, 0, 0.18) 0%,
         rgba(97, 80, 62, 0.8) 100%
@@ -339,10 +334,8 @@
       linear-gradient(180deg, #262424 100%, #1a1a1a 0%),
       url(/images/textures/paper-14.webp) lightgray 50% / cover no-repeat;
     background-blend-mode: multiply, hard-light, normal;
-    box-shadow:
-      0 -3px 3.3px 0 rgba(36, 34, 34, 0.33) inset,
-      0 -7px 5.289px 0 #343232 inset,
-      0 8px 16px 0 rgba(9, 9, 9, 0.18),
+    box-shadow: 0 -3px 3.3px 0 rgba(36, 34, 34, 0.33) inset,
+      0 -7px 5.289px 0 #343232 inset, 0 8px 16px 0 rgba(9, 9, 9, 0.18),
       0 0 0 4px #61503e;
     color: #ffe7c8;
     border-color: #1a1a1a;
